--- a/views/question.haml
+++ b/views/question.haml
@@ -5,9 +5,15 @@
     %link{:rel => "stylesheet", :type => "text/css", :href => "styles.css"}
     %title="Shiny Sriram"
   %body
-    = 'Question of the Day is:'
-    %b
-      = @question
-    %form{:action=>'/submitanswer' :method=>'POST'}
-      %input{:type=>'text' :name=>'answer'}
-      %submit
+    - if @question.id == nil
+      = 'Sorry, Question not found.'
+    - else
+      %b
+        = @question.body
+      %form{:action=>'/question/'+@question.id.to_s, :method=>'POST'}
+        %input{:type=>'text', :name=>'answer'}
+        %input{:type=>'submit'}
+      %br
+      %br
+      - @question.answer.each do |answer|
+        = answer.body
