--- a/views/question_archive.haml
+++ b/views/question_archive.haml
@@ -10,3 +10,7 @@
       %a{:href=>'question/'+question.id.to_s}
         = question.body.to_s
         %br
+    %br
+    %br
+    %a{:href=>'addquestion'}
+      = 'Add a new Question'
