--- a/views/question_success.haml
+++ b/views/question_success.haml
@@ -7,3 +7,6 @@
   %body
     = 'Question added successfully:<br />'
     = @question.body
+    
+    %a{:href=>'/questions'}
+      = 'View all questions'
