Removed URL User add method, added registration page

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,6 +5,7 @@
     %link{:rel => "stylesheet", :type => "text/css", :href => "styles.css"}
     %title="DiversIT"
   %body
+    - haml :header
     = 'Users:<br />'
     - @users.each do |user|
       = user.username
