--- a/views/register.haml
+++ b/views/register.haml
@@ -10,10 +10,10 @@
       %input{:type => 'text', :id => 'email', :name => 'email'}
       %br
       = 'Type a Password: '
-      %input{:type => 'text', :id => 'password', :name => 'password'}
+      %input{:type => 'password', :id => 'password', :name => 'password'}
       %br
       = 'Type it again: '
-      %input{:type => 'text', :id => 'pconfirm', :name => 'pconfirm'}
+      %input{:type => 'password', :id => 'pconfirm', :name => 'pconfirm'}
       %br
       = 'Your birth date: '
       %input{:type => 'text', :id => 'bdate', :name => 'bdate'}
