--- a/views/register.haml
+++ b/views/register.haml
@@ -9,6 +9,12 @@
       = 'Enter your Email Address: '
       %input{:type => 'text', :id => 'email', :name => 'email'}
       %br
+      = 'What\'s your first name?: '
+      %input{:type => 'text', :id => 'first', :name => 'first'}
+      %br
+      = 'What\'s your last name?'
+      %input{:type => 'text', :id => 'last', :name => 'last'}
+      %br
       = 'Type a Password: '
       %input{:type => 'password', :id => 'password', :name => 'password'}
       %br
