--- a/views/login.haml
+++ b/views/login.haml
@@ -5,7 +5,8 @@
     %link{:rel => "stylesheet", :type => "text/css", :href => "styles.css"}
     %title="Login to DiversIT"
   %body
-    %form{:action => '/register', :method => 'POST'}
+    = haml :header
+    %form{:action => '/login', :method => 'POST'}
       = 'Enter your Email Address: '
       %input{:type => 'text', :id => 'email', :name => 'email'}
       %br
@@ -13,3 +14,4 @@
       %input{:type => 'text', :id => 'password', :name => 'password'}
       %br
       %input{:type => 'submit'}
+    = haml :footer
