--- a/views/question.haml
+++ b/views/question.haml
@@ -10,9 +10,10 @@
     - else
       %b
         = @question.body
-      %form{:action=>'/question/'+@question.id.to_s, :method=>'POST'}
-        %input{:type=>'text', :name=>'answer'}
-        %input{:type=>'submit'}
+      - if logged_in?
+        %form{:action=>'/question/'+@question.id.to_s, :method=>'POST'}
+          %input{:type=>'text', :name=>'answer'}
+          %input{:type=>'submit'}
       %br
       %br
       - @question.answer.each do |answer|
