--- a/views/header.haml
+++ b/views/header.haml
@@ -1,2 +1,12 @@
 .header
-  = "Header!"
+  .title
+    = "diversiT"
+  .loginBox
+    %form{:action => '/login', :method => 'POST'}
+      = 'email: '
+      %input{:type => 'text', :id => 'email', :name => 'email'}
+      %br
+      = 'password: '
+      %input{:type => 'text', :id => 'password', :name => 'password'}
+      %br
+      %input{:type => 'submit', :text => 'Login'}
