--- a/views/question.haml
+++ b/views/question.haml
@@ -6,6 +6,7 @@
     %title="Shiny Sriram"
   %body
     = haml :header
+    = haml :debug
     - if @question == nil
       = 'Sorry, Question not found.'
     - else
