--- a/views/comment_add.haml
+++ b/views/comment_add.haml
@@ -6,8 +6,6 @@
     %title="Add a Comment"
   %body
     = 'Add a Comment:<br />'
-    %form{:action=>'/addcomment/'+params[:pid]+'/'+params[:rid], :method=>'POST'}
+    %form{:action=>'/addcomment/'+params[:qid]+'/'+params[:rid], :method=>'POST'}
       %input{:type=>'text', :name=>'comment'}
       %input{:type=>'submit'}
-    / - if @comment != nil
-    /   = @comment.body
