--- a/views/question.haml
+++ b/views/question.haml
@@ -18,18 +18,18 @@
           %input{:type=>'submit', :value => 'Answer this question!'}
         %br
       %br
+      / - @answers.each do |answer|
+      /   .response
+      /     = '-'
+      /     - if logged_in?
+      /       %a{:href=>'/addcomment/'+@question.id.to_s+'/'+answer.id.to_s}
+      /         = answer.body
+      /         
+      /     - else
+      /       = answer.body
       - @answers.each do |answer|
         .response
-          = '-'
-          - if logged_in?
-            %a{:href=>'/addcomment/'+@question.id.to_s+'/'+answer.id.to_s}
-              = answer.body
-              
-          - else
-            = answer.body
-      - @answers.each do |answer|
-        .response
-          = showTree answer, ''
+          = showTree answer
       %a{:href=>'/questions'}
         = 'View all questions'
     = haml :footer
