--- a/views/header.haml
+++ b/views/header.haml
@@ -23,4 +23,13 @@
       %a{:href => '/logout'}
         = 'Logout'
   .menu
-    = 'Menu'
+    %a{:href => '/'}
+      = 'Home'
+    - if session[:user]
+      %a{:href => '/profile'}
+        = 'My Profile'
+    - else
+      %a{:href => '/register'}
+        = 'Register'
+    %a{:href => '/register'}
+      = 'Register'
