--- a/views/index.haml
+++ b/views/index.haml
@@ -10,12 +10,13 @@
       .question
         = @question.body
       .answerbox
-      - if @u
-        %form{:action => '/question/'+@question.id.to_s, :method => 'POST'}
-          %input{:type => 'text', :name => 'answer'}
-          %input{:type => 'submit', :value => 'Answer!'}
-      - else
-        .menulink.container{:id => 'answernow'}
-          %a{:href => '/register'}
-            = 'Answer Now!'
+        - if @u
+          .answerarea
+            %form{:action => '/question/'+@question.id.to_s, :method => 'POST'}
+              %input{:type => 'text', :name => 'answer'}
+              %input{:type => 'submit', :value => 'Answer!'}
+        - else
+          .menulink.container{:id => 'answernow'}
+            %a{:href => '/register'}
+              = 'Answer Now!'
     = haml :footer
