Fixed bug that produced nil bodies when answered from main

--- a/views/index.haml
+++ b/views/index.haml
@@ -13,7 +13,7 @@
         - if @u
           .answerarea
             %form{:action => '/question/'+@question.id.to_s, :method => 'POST'}
-              %input{:type => 'text', :name => 'answer'}
+              %input{:type => 'text', :name => 'response'}
               %input{:type => 'submit', :value => 'Answer!'}
         - else
           .menulink.container{:id => 'answernow'}
