--- a/views/header.haml
+++ b/views/header.haml
@@ -25,6 +25,9 @@
   .menu
     %a{:href => '/'}
       = 'Home'
+    = ' | '
+    %a{:href => '/questions'}
+      = 'Old Questions'
     - if session[:user]
       = ' | '
       %a{:href => '/profile'}
@@ -34,5 +37,6 @@
       %a{:href => '/register'}
         = 'Register'
     = ' | '
+    
     %a{:href => '/about'}
       = 'About'
