--- a/views/login.haml
+++ b/views/login.haml
@@ -7,8 +7,8 @@
   %body
     = haml :header
     %form{:action => '/login', :method => 'POST'}
-      = 'Enter your Email Address: '
-      %input{:type => 'text', :id => 'email', :name => 'email'}
+      = 'Enter your username: '
+      %input{:type => 'text', :id => 'username', :name => 'username'}
       %br
       = 'Type a Password: '
       %input{:type => 'text', :id => 'password', :name => 'password'}
