--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ body {
   background-image:url('../images/bg.png');
   background-repeat:repeat;
   color:#a0a0a0;
-  font-family:verdana,sans-serif;
+  font-family:Helvetica,sans-serif;
   font-size:100%;
   text-shadow: 0px 0px 1px #404040;
 }
@@ -29,7 +29,7 @@ div.container {
   -moz-border-radius:10px;
   -webkit-border-radius:10px;
   border-radius:10px;
-  
+
   /* shadow */
   -moz-box-shadow:0px 0px 10px #4FB34F;
   -webkit-box-shadow:0px 0px 10px #4FB34F;
@@ -39,12 +39,12 @@ div.container {
   background:-moz-linear-gradient(top, #4FB34F, #319331);
   background: -webkit-gradient(linear,
                   left top, left bottom, from(#4FB34F), to(#319331));
-  
+
   padding:15px;
 
   margin-left:auto;
   margin-right:auto;
-  
+
   color:#202020;
   text-align:center;
 }
@@ -87,7 +87,7 @@ div.row span.formw {
   text-align:left;
 }
 
-input {
+input, textarea {
   background:#70C670;
   border:1px solid #202020;
   font-family:verdana,sans-serif;
@@ -123,6 +123,14 @@ div.questiontimestamp {
   padding-top:20px;
 }
 
+.error {
+  color:red;
+}
+
+.notice {
+  color:white;
+}
+
 .answerbox {
   padding-top:30px;
 }
@@ -132,7 +140,7 @@ div.questiontimestamp {
 
   margin-left:auto;
   margin-right:auto;
-  
+
   color:#202020;
   text-align:center;
 }
