--- a/views/comment_add.haml
+++ b/views/comment_add.haml
@@ -6,6 +6,6 @@
     %title="Add a Comment"
   %body
     = 'Add a Comment:<br />'
-    %form{:action=>'/addcomment/'+params[:qid]+'/'+params[:rid], :method=>'POST'}
+    %form{:action=>'/comment/'+params[:qid]+'/'+params[:rid], :method=>'POST'}
       %input{:type=>'text', :name=>'comment'}
       %input{:type=>'submit'}
