--- a/views/register.haml
+++ b/views/register.haml
@@ -15,7 +15,7 @@
           = 'What\'s your first name?: '
           %input{:type => 'text', :id => 'firstname', :name => 'firstname'}
         .row
-          = 'What\'s your last name?'
+          = 'What\'s your last name?: '
           %input{:type => 'text', :id => 'lastname', :name => 'lastname'}
         .row
           = 'Type a Password: '
