--- a/views/question.haml
+++ b/views/question.haml
@@ -50,14 +50,15 @@
         %br
       %br
 
-      - demo_id = 0
-      - data = []
-      - (1..4).each do |i|
-        - data << ['Choice ' + i.to_s, @responses.all(:choice => i).length]
-      - g = gruff_pie(@question.body, data, @question.id, demo_id)
-      - path = "/images/" + @question.id.to_s + "_" + demo_id.to_s + ".png"
-      - g.write("public" + path)
-      %img{ :src => path }
+      - if @question.type == 'mc'
+        - demo_id = 0
+        - data = []
+        - (1..4).each do |i|
+          - data << ['Choice ' + i.to_s, @responses.all(:choice => i).length]
+        - g = gruff_pie(@question.body, data, @question.id, demo_id)
+        - path = "/images/" + @question.id.to_s + "_" + demo_id.to_s + ".png"
+        - g.write("public" + path)
+        %img{ :src => path }
 
       - @responses.each do |response|
         .response
