--- a/views/question_success.haml
+++ b/views/question_success.haml
@@ -2,11 +2,17 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en", :lang => "en"}
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'content="text/html; charset=utf-8;'}
-    %link{:rel => "stylesheet", :type => "text/css", :href => "styles.css"}
-    %title="Success"
+    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/style.css"}
+    %title = "Question added successfully!"
   %body
-    = 'Question added successfully:<br />'
+    = haml :header
+
+    = 'Question added successfully:'
+    %br
     = @question.body
-    
+    %br
+
     %a{:href=>'/questions'}
-      = 'View all questions'
+      = 'View all questions.'
+
+    = haml :footer
