--- a/views/question_add.haml
+++ b/views/question_add.haml
@@ -14,7 +14,7 @@
         .row
           %input{:type=>'radio', :name=>'type', :value=>'free'} Free Response
         .row
-          %input{:type=>'radio', :name=>'type', :value=>'mc'} Multiple Choice
+          %input{:type=>'radio', :name=>'type', :value=>'mc', :checked=>'yes'} Multiple Choice
         .row
           = 'Choice 1: '
           %input{:type=>'text', :name=>'choice1'}
