--- a/views/comment_add.haml
+++ b/views/comment_add.haml
@@ -3,7 +3,7 @@
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'content="text/html; charset=utf-8;'}
     %link{:rel => "stylesheet", :type => "text/css", :href => "styles.css"}
-    %title="Add a Comment"
+    %title="DiversIT: Add Comment"
   %body
     = 'Add a Comment:<br />'
     %form{:action=>'/comment/'+params[:qid]+'/'+params[:rid], :method=>'POST'}
