--- a/views/question_success.haml
+++ b/views/question_success.haml
@@ -3,7 +3,7 @@
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'content="text/html; charset=utf-8;'}
     %link{:rel => "stylesheet", :type => "text/css", :href => "/css/style.css"}
-    %title = "Question added successfully!"
+    %title = "DiversIT: Add Question Successful!"
   %body
     = haml :header
 
