--- a/views/header.haml
+++ b/views/header.haml
@@ -1,7 +1,7 @@
 .header
   .title
     %a{:href => '/'}
-      = "DiversIT"
+      %img{:src => '/images/diversit_large.png'}
   .loginBox
     - if !logged_in?
       %form{:action => '/login', :method => 'POST'}
