--- a/views/index.haml
+++ b/views/index.haml
@@ -3,7 +3,7 @@
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'content="text/html; charset=utf-8;'}
     %link{:rel => "stylesheet", :type => "text/css", :href => "css/style.css"}
-    %title="DiversIT"
+    %title="DiversIT: home"
   %body
     = haml :header
     - if @question
