--- a/views/question_add.haml
+++ b/views/question_add.haml
@@ -3,7 +3,7 @@
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'content="text/html; charset=utf-8;'}
     %link{:rel => "stylesheet", :type => "text/css", :href => "/css/style.css"}
-    %title="Add a Question"
+    %title="DiversIT: Add Question"
   %body
     = haml :header
     = 'Add a Question:<br />'
